--- a/assets/css/rocket.css
+++ b/assets/css/rocket.css
@@ -158,6 +158,14 @@ h6 {
   letter-spacing: 0;
 }
 
+small {
+  font-size: 1.2rem;
+}
+
+.text-muted {
+  color: #6c757d !important;
+}
+
 .bold {
   font-weight: bold !important;
 }
@@ -206,6 +214,9 @@ a.link-muted {
   color: #6c757d !important;
   font-size: 13px;
   text-decoration: none;
+}
+a.link-muted:hover {
+  color: #355CAA !important;
 }
 
 a:hover {
@@ -542,11 +553,106 @@ hr {
   flex-direction: column;
 }
 
+.stream-wrapper {
+  border-radius: 5px;
+  text-align: left;
+  padding: 20px 0 10px 0;
+}
+
+.stream-wrapper + .stream-wrapper {
+  border-top: 1px solid #eee;
+  margin-top: 30px;
+}
+
+.status-square {
+  border-radius: 3px;
+  height: 30px;
+  min-width: 8px;
+  width: 100%;
+}
+
+.status-square + .status-square {
+  margin-left: 6px;
+}
+
+.success {
+  background-color: #4cae50;
+  color: #fff;
+}
+
+.danger {
+  background-color: #f44336;
+  color: #fff;
+}
+
+.nodata {
+  background-color: #f8f8f8;
+  color: #ccc;
+}
+
+.warning {
+  background-color: #ff9800;
+  color: #fff;
+}
+
 /* Larger than mobile */
 /* Larger than phablet (also point when grid becomes active) */
 /* Larger than tablet */
 /* Larger than desktop */
 /* Larger than Desktop HD */
+.tooltip {
+  background-color: #fff;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: #3b3b3b;
+  font-size: 12px;
+  line-height: 18px;
+  padding: 16px;
+  position: absolute;
+  text-align: left;
+  z-index: 100;
+  width: 240px;
+  transition: opacity 0.2s;
+}
+.tooltip.tooltip-arrow {
+  position: absolute;
+  bottom: 100%;
+  width: 4px;
+  text-align: center;
+  border: 4px solid transparent;
+  border-bottom-color: #fff;
+  left: 50%;
+  margin-left: -2px;
+}
+.tooltip.tooltip-datetime {
+  font-size: 12px;
+  color: #7c7c7c;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.tooltip.tooltip-key {
+  color: #ccc;
+  font-size: 10px;
+}
+.tooltip.tooltip-description {
+  margin-top: 12px;
+  font-size: 14px;
+  color: #181818;
+}
+.tooltip#tooltip-status {
+  padding: 4px 8px;
+  border-radius: 15px;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 6px;
+  display: inline-block;
+}
+.tooltiphr {
+  border: none;
+  border-top: 1px solid #ededed;
+  margin-top: 16px;
+}
+
 /*!
  * Bootstrap Utilities v5.0.2 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
