--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -5,6 +5,10 @@ a {
     color: $color-muted !important;
     font-size: 13px;
     text-decoration: none;
+
+    &:hover {
+      color: $color-primary-dark !important;
+    }
   }
 }
 
