--- a/assets/scss/_misc.scss
+++ b/assets/scss/_misc.scss
@@ -51,3 +51,45 @@ hr {
   flex: 1;
   flex-direction: column;
 }
+
+.stream-wrapper {
+  border-radius: 5px;
+  text-align: left;
+  padding: 20px 0 10px 0;
+}
+
+.stream-wrapper + .stream-wrapper {
+  border-top: 1px solid #eee;
+  margin-top: 30px;
+}
+
+.status-square {
+  border-radius: 3px;
+  height: 30px;
+  min-width: 8px;
+  width: 100%;
+}
+
+.status-square + .status-square {
+  margin-left: 6px;
+}
+
+.success {
+  background-color: #4cae50;
+  color: #fff;
+}
+
+.danger {
+  background-color: #f44336;
+  color: #fff;
+}
+
+.nodata {
+  background-color: #f8f8f8;
+  color: #ccc;
+}
+
+.warning {
+  background-color: #ff9800;
+  color: #fff;
+}
