--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -39,6 +39,14 @@ h6 {
   letter-spacing: 0;
 }
 
+small {
+  font-size: 1.2rem;
+}
+
+.text-muted {
+  color: $color-muted !important;
+}
+
 .bold {
   font-weight: bold !important;
 }
