Updating css, Updating readme,

--- a/assets/scss/_misc.scss
+++ b/assets/scss/_misc.scss
@@ -56,6 +56,8 @@ hr {
   border-radius: 5px;
   text-align: left;
   padding: 20px 0 10px 0;
+  max-width: 100%;
+  overflow: auto;
 }
 
 .stream-wrapper + .stream-wrapper {
