--- a/assets/css/rocket.css
+++ b/assets/css/rocket.css
@@ -557,6 +557,8 @@ hr {
   border-radius: 5px;
   text-align: left;
   padding: 20px 0 10px 0;
+  max-width: 100%;
+  overflow: auto;
 }
 
 .stream-wrapper + .stream-wrapper {
