--- a/assets/css/rocket.css
+++ b/assets/css/rocket.css
@@ -38,7 +38,7 @@ body {
 
 @media (min-width: 400px) {
   .container {
-    width: 85%;
+    width: 95%;
     padding: 0;
   }
 }
@@ -530,6 +530,16 @@ hr {
   background-color: #f5414f;
 }
 
+@media (max-width: 550px) {
+  .ms-4.chip {
+    margin-left: 0.25rem !important;
+  }
+
+  .chip {
+    font-size: 10px !important;
+    padding: 2px 10px !important;
+  }
+}
 .badge {
   display: inline-block;
   padding: 0.35em 0.65em;
